apps/rustdesk/hbbr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rustdesk-hbbr
  namespace: rustdesk
spec:
  serviceName: rustdesk-hbbr
  replicas: 2
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: rustdesk-hbbr
      app.kubernetes.io/part-of: rustdesk
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rustdesk-hbbr
        app.kubernetes.io/part-of: rustdesk
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsNonRoot: true
        runAsUser: 1003
        runAsGroup: 1003
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: rustdesk-hbbr
                app.kubernetes.io/part-of: rustdesk
            topologyKey: kubernetes.io/hostname
      tolerations:
      - key: node.kubernetes.io/not-ready
        operator: Exists
        effect: NoExecute
        tolerationSeconds: 60
      - key: node.kubernetes.io/unreachable
        operator: Exists
        effect: NoExecute
        tolerationSeconds: 60
      containers:
      - name: hbbr
        image: rustdesk/rustdesk-server:${RUSTDESK_IMAGE_TAG}
        workingDir: /data
        command:
        - /usr/bin/hbbr
        args:
        - -k
        - _
        securityContext: *id001
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: '1'
            memory: 256Mi
        ports:
        - name: relay
          containerPort: 21117
        startupProbe:
          tcpSocket:
            port: relay
          periodSeconds: 5
          failureThreshold: 60
        readinessProbe:
          tcpSocket:
            port: relay
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: relay
          periodSeconds: 20
          failureThreshold: 3
        volumeMounts:
        - name: data
          mountPath: /data
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: identity
        secret:
          secretName: rustdesk-identity
      - name: data
        emptyDir:
          sizeLimit: ${RUSTDESK_RELAY_STORAGE_SIZE}
      - name: tmp
        emptyDir:
          sizeLimit: ${RUSTDESK_TMP_STORAGE_SIZE}
